# stealth-browser

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: run.py
examples/: basic.py  with_proxy_and_detect.py
stealth_browser/: __init__.py  actions.py  browser.py  detect.py  extract_js.py  proxies.py  safety.py  snapshot.py  stealth.py
stealth_browser/engines/: __init__.py  base.py  camoufox_engine.py  curl_cffi_engine.py  nodriver_engine.py  router.py
tests/: test_imports.py
