[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "stealth-browser"
version = "0.1.0"
description = "Undetected headless Chromium pool — 20+ modern fingerprint patches, CDP proxy auth, structured bot-wall detection. Extracted from a production scraper."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Rushi", email = "rushikesh.koochana@gmail.com" }]
keywords = [
    "scraping", "web-scraping", "stealth", "headless-chrome",
    "browser-automation", "anti-detect", "nodriver", "cdp",
    "playwright-alternative", "puppeteer-alternative",
    "cloudflare-bypass", "anti-bot", "proxy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "nodriver>=0.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/Rusheesonu/stealth-browser"
Repository = "https://github.com/Rusheesonu/stealth-browser"
Documentation = "https://github.com/Rusheesonu/stealth-browser#readme"
Issues = "https://github.com/Rusheesonu/stealth-browser/issues"
"Hosted product" = "https://stealthscraper.dev"

[tool.hatch.build.targets.wheel]
packages = ["stealth_browser"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
